--- a/index.html
+++ b/index.html
@@ -1,34 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
+
 <body>
     <header>
-        <div class="logo">
-            Header Logo
-        </div>
         <div class="nav">
-            <a href="">header link one</a>
-            <a href="">header link two</a>
-            <a href="">header link three</a>
+            <div class="logo">
+                <p>Header Logo</p>
+            </div>
+            <div class="navigation">
+                <a href="">header link one</a>
+                <a href="">header link two</a>
+                <a href="">header link three</a>
+            </div>
+        </div>
+        <div class="hero">
+            <div class="hero-content">
+                <h1>
+                    This website is awesome
+                </h1>
+                <p>
+                    This website has some subtext that goes here under the main title. It's smaller font and color is
+                    lower contrast
+                </p>
+                <button>
+                    Sign up
+                </button>
+            </div>
+            <div class="img">
+                <img src="https://images.unsplash.com/photo-1712762056200-50d8f803ba10?q=80&w=1274&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                    alt="this is an imgage placeholder">
+            </div>
         </div>
     </header>
-    <div class="hero">
-        <div class="hero-content">
-            <h1>
-                This website is awesome
-            </h1>
-            <p>
-                This website has some subtext that goes here under the main title. It's smaller font and color is lower contrast
-            </p>
-            <button>
-                Sign up
-            </button>
+
+    <div class="info-sec">
+        <div class="title">
+            <h2>Some random information</h2>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <div class="image">
+                </div>
+                <div class="subtext">
+                    <p>
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image">
+                </div>
+                <div class="subtext">
+                    <p>
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image">
+                </div>
+                <div class="subtext">
+                    <p>
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="image">
+                </div>
+                <div class="subtext">
+                    <p>
+                        this is some subtext under an illustration or image
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
+    <div class="quote-sec">
+        
+    </div>
 </body>
+
 </html>
