finished the footer

--- a/index.html
+++ b/index.html
@@ -84,13 +84,25 @@
         </div>
     </div>
     <div class="quote-sec">
-        <p class="quote"><i>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</i></p>
+        <p class="quote"><i>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+                space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</i></p>
         <p class="writer">-Thor, God of thunder</p>
     </div>
 
     <div class="call">
-        
+        <div class="time">
+            <div class="call-txt">
+                <h2>Call to action! It's time</h2>
+                <p>sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div>
+                <button type="button">Sign Up</button>
+            </div>
+        </div>
     </div>
+    <footer>
+        <p>Copyright &copy; The Odin Project 2021</p>
+    </footer>
 </body>
 
 </html>
